loading card successful

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <option value="AIRTEL" name="netw">AIRTEL</option>
     </select>
     <input type="number" id="refnumber" placeholder="enter reference number">
-    <input type="submit" onclick="submit()">
+    <input type="submit" onclick="submit()" id="subm">
 <div id="phoneResult"></div>
 </section>
 
